<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".Dyslexia.TestDyslexiaActivity">

    <TextView
        android:id="@+id/txtTestDyslexiaLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Say the word below"
        android:textAlignment="center"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/txtTestDyslexiaTestCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/test_format"
        android:textAlignment="center"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/txtTestDyslexiaWord"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="@dimen/text_size_large" />

    <Button
        android:id="@+id/btnTestDyslexiaSayTheWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Start New" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/txtTestDyslexiaAttemptCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/attempts_format"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/txtTestDyslexiaAttemptLeftCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/attempts_left_format"
            android:textSize="@dimen/text_size_small" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/txtTestDyslexiaCorrectCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/correct_format"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/txtTestDyslexiaIncorrectCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/incorrect_format"
            android:textSize="@dimen/text_size_small" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtTestDyslexiaWordStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:textSize="@dimen/text_size_large" />

</LinearLayout>